platform/policies/require-non-root.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-run-as-nonroot
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot in ValidatingPolicy
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root. This policy ensures
      `runAsNonRoot` is set to true.
    argocd.argoproj.io/sync-wave: "0"
spec:
  validationActions:
     - Deny
  autogen:
    podControllers:
      controllers:
        - deployments
        - daemonsets
        - statefulsets
        - jobs
        - cronjobs
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kyverno
            - kube-system

  variables:
   - name: ctnrs
     expression: >-
      object.spec.containers + 
      object.spec.?initContainers.orValue([]) + 
      object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        (object.spec.?securityContext.?runAsNonRoot.orValue(false) == true
          && variables.ctnrs.all(c, c.?securityContext.?runAsNonRoot.orValue(true) == true))
          || variables.ctnrs.all(c, c.?securityContext.?runAsNonRoot.orValue(false) == true)
      message: >-
        Running as root is not allowed. Either spec.securityContext.runAsNonRoot 
        must be set to true, or all containers (spec.containers[*], spec.initContainers[*], 
        spec.ephemeralContainers[*]) must have securityContext.runAsNonRoot set to true.
